//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

import "txbase.proto";

message TxDepositIn {
	TxBase TxBase = 1;
	bytes  Puk    = 2; //候选见证人公钥，这个公钥需要和交易index=0的输出地址保持一致
}

message TxDepositOut {
	TxBase TxBase = 1;
}